# MicroServiceProject

./: .env.stg.example  .gitignore  README.md  docker-compose.yml
NewProject/: .dockerignore  .env.prod  (+7 more)
ms_auth/: .dockerignore  Dockerfile  pyproject.toml
ms_auth/migrations/: env.py
ms_auth/migrations/versions/: d12aee83b46c_initial_revision.py
ms_auth/src/: config.py  main.py  models.py
ms_auth/src/api/: dependencies.py
ms_auth/src/api/routes/: auth_routes.py
ms_auth/src/application/dtos/: auth_dtos.py
ms_auth/src/application/use_cases/: logout.py  refresh_access_token.py  register_employee.py  request_otp.py  verify_otp.py
ms_auth/src/core/: cache.py  celery_app.py  redis_client.py  session.py
ms_auth/src/core/mappers/: employee_mapper.py  otp_mapper.py  refresh_token_mapper.py
ms_auth/src/core/models/: employee_model.py  otp_models.py  refresh_token_model.py
ms_auth/src/core/repositories/: employee_repository_impl.py  otp_repository_impl.py  refresh_token_repository_impl.py
ms_auth/src/core/security/: jwt_manager.py
ms_auth/src/core/tasks/: sms_task.py
ms_auth/src/core/uow/: sqlalchemy_uow.py
ms_auth/src/domain/entities/: OTP_code.py  employee.py  refresh_token.py
ms_auth/src/domain/exceptions/: domain_exceptions.py
ms_auth/src/domain/repositories/: employee_repository.py  otp_repository.py  refresh_token_repository.py
ms_auth/src/domain/services/: sms_service.py
ms_auth/src/domain/uow/: unit_of_work.py
ms_auth/src/domain/value_objects/: employee_role.py  permission.py  phone_number.py
ms_auth/src/migrations/: env.py
(+19 files in other folders)
